   * Deprecated the following functions from the wesnoth table,
     all of which have better replacements:
     get_side, get_side_count, get_unit_type_ids, get_unit_type,
     register_wml_action
   * Changed: Extended support for toggle_button.
   * Fixed: wesnoth.find_reach does no longer replace a passed private lua
     proxy unit with the on-map unit at the same location
 * Multiplayer:
   * Fix an accidental terrain type change in Isar's Cross
   * Fix attacker side being human in 6p_Team_Survival (bug #19400)
   * Ignore Pango markup in map descriptions (bug #19210)
   * Canceling the sides setup screen when hosting a MP game now brings the
     host back to the game configuration screen first instead of returning
     immediately to the lobby or (for hotseat) titlescreen (bug #7130)
   * The Set Password action is no longer shown for local hotseat games
     (bug #10784)
   * Changes to the time of day schedules of Fallenstar Lake and Silverhead
     Crossing
   * Random leader is default selection when picking faction
 * Music and sound effects:
   * Replaced some of the wolf hit sounds with lower-pitched ones
 * Terrain:
   * New Syntax for terrain maps
   * New tropical forest images
   * New palm forest terrain
   * Deprecated flowers (Ggf) and Volcano (Qv) removed - use Gg^Efm and Mv
     respectively
   * Fix bridge/rail transitions to each other
   * Add new rail terrain type; no existing unit can move on it, so their
     move/defense values are unchanged
   * New stone, hanging, and wooden chasm bridges
 * Unit changes and balancing:
   * New extra_define ENABLE_WOLF_ADVANCEMENT to optionally enable Wolves
     advancement to Great Wolves and Direwolves
   * New extra_define ENABLE_TROLL_SHAMAN to optionally enable Troll Whelps
     advancement to Troll Shamans (not in multiplayer)
   * Lowered General's experience to 150 when extra_define DISABLE_GRAND_MARSHAL
     is used
 * User interface: