@@ -82,6 +82,7 @@ Version 1.11.0-svn:
    * Changed: Extended support for toggle_button.
    * Fixed: wesnoth.find_reach does no longer replace a passed private lua
      proxy unit with the on-map unit at the same location
+   * new: helper.round function
  * Multiplayer:
    * Fix an accidental terrain type change in Isar's Cross
    * Fix attacker side being human in 6p_Team_Survival (bug #19400)
